--- a/Depo/Depo/Presentation/UserStories/Settings/ContactSync/MainScreen/Views/Cards/ContactSyncSmallCardView.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/ContactSync/MainScreen/Views/Cards/ContactSyncSmallCardView.xib
@@ -39,7 +39,7 @@
                             </connections>
                         </button>
                     </subviews>
-                    <color key="backgroundColor" name="secondaryBackground"/>
+                    <color key="backgroundColor" name="primaryBackground"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="48" id="EKa-rK-Fzf"/>
                         <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="jYJ-0I-LZu" secondAttribute="trailing" constant="16" id="QaG-A3-6f9"/>
@@ -56,7 +56,7 @@
                 </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-            <color key="backgroundColor" name="secondaryBackground"/>
+            <color key="backgroundColor" name="primaryBackground"/>
             <constraints>
                 <constraint firstItem="zld-NN-vDA" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="7kz-xE-dhF"/>
                 <constraint firstItem="UWB-bn-lOf" firstAttribute="leading" secondItem="dzU-Oe-zrH" secondAttribute="trailing" constant="8" id="Ga7-qx-lPj"/>
@@ -85,7 +85,7 @@
         <namedColor name="itemSeperator">
             <color red="0.91699999570846558" green="0.91699999570846558" blue="0.91699999570846558" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <namedColor name="secondaryBackground">
+        <namedColor name="primaryBackground">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
