--- a/Depo/Depo/Presentation/SubViews/CarouselPagerHeaderView/ViewControllers/CarouselPagerReusableViewController.xib
+++ b/Depo/Depo/Presentation/SubViews/CarouselPagerHeaderView/ViewControllers/CarouselPagerReusableViewController.xib
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionReusableView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="odV-w1-KP1" customClass="CarouselPagerReusableViewController" customModule="LifeTech_lifedrive" customModuleProvider="target">
+        <collectionReusableView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="odV-w1-KP1" customClass="CarouselPagerReusableViewController" customModule="Billo" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="500" height="200"/>
             <autoresizingMask key="autoresizingMask"/>
             <subviews>
@@ -30,7 +31,7 @@
                                     </constraints>
                                 </pageControl>
                             </subviews>
-                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <color key="backgroundColor" name="primaryBackground"/>
                             <constraints>
                                 <constraint firstItem="cbc-SD-EkJ" firstAttribute="top" secondItem="LTv-KG-DXj" secondAttribute="bottom" id="25D-Tc-0Dd"/>
                                 <constraint firstAttribute="trailing" secondItem="LTv-KG-DXj" secondAttribute="trailing" constant="5" id="Q5O-48-Znf"/>
@@ -50,13 +51,13 @@
                     </constraints>
                 </view>
             </subviews>
+            <viewLayoutGuide key="safeArea" id="3PF-mN-Thc"/>
             <constraints>
                 <constraint firstItem="UgU-2o-uBx" firstAttribute="top" secondItem="odV-w1-KP1" secondAttribute="top" id="K5g-Ra-ret"/>
                 <constraint firstAttribute="trailing" secondItem="UgU-2o-uBx" secondAttribute="trailing" id="MzT-Ji-qaW"/>
                 <constraint firstItem="UgU-2o-uBx" firstAttribute="leading" secondItem="odV-w1-KP1" secondAttribute="leading" id="NXw-0R-XNd"/>
                 <constraint firstAttribute="bottom" secondItem="UgU-2o-uBx" secondAttribute="bottom" id="XKy-rH-8z8"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="3PF-mN-Thc"/>
             <connections>
                 <outlet property="contentView" destination="2g3-fW-fI8" id="kIS-nC-No9"/>
                 <outlet property="pageControl" destination="cbc-SD-EkJ" id="5aM-ax-Xs0"/>
@@ -65,4 +66,9 @@
             <point key="canvasLocation" x="84" y="159"/>
         </collectionReusableView>
     </objects>
+    <resources>
+        <namedColor name="primaryBackground">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
