--- a/Depo/Depo/Presentation/SubViews/CustomTabBars/TabBarView.xib
+++ b/Depo/Depo/Presentation/SubViews/CustomTabBars/TabBarView.xib
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_5" orientation="portrait" appearance="light"/>
+    <device id="retina6_5" orientation="portrait" appearance="dark"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -52,10 +53,11 @@
                                 <constraint firstAttribute="height" constant="49" id="nbp-Da-Kmi"/>
                             </constraints>
                             <items/>
+                            <color key="barTintColor" name="secondaryBackground"/>
                             <color key="selectedImageTintColor" red="0.2666666667" green="0.80000000000000004" blue="0.81568627449999997" alpha="1" colorSpace="calibratedRGB"/>
                         </tabBar>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" adjustsImageWhenDisabled="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HTg-Qb-BHM">
-                            <rect key="frame" x="175" y="789.66666666666663" width="64" height="64"/>
+                            <rect key="frame" x="167" y="781.66666666666663" width="80" height="80"/>
                             <constraints>
                                 <constraint firstAttribute="width" secondItem="HTg-Qb-BHM" secondAttribute="height" multiplier="1:1" id="bBY-Vf-F58"/>
                             </constraints>
@@ -106,6 +108,9 @@
     </objects>
     <resources>
         <image name="CenterButton" width="64" height="64"/>
+        <namedColor name="secondaryBackground">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
