--- a/Depo/Depo/Presentation/SubViews/ViewForPopUp/PopUpSubViews/ContactBackupOld/ContactBackupOld.xib
+++ b/Depo/Depo/Presentation/SubViews/ViewForPopUp/PopUpSubViews/ContactBackupOld/ContactBackupOld.xib
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -85,7 +86,7 @@
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" name="secondaryBackground"/>
             <constraints>
                 <constraint firstItem="bMn-95-4CQ" firstAttribute="leading" secondItem="feW-jJ-Vzq" secondAttribute="trailing" constant="14" id="9KO-T3-whi"/>
                 <constraint firstItem="WQO-jr-hnY" firstAttribute="top" secondItem="ad6-gn-bT8" secondAttribute="bottom" id="9jQ-hA-Qc3"/>
@@ -124,5 +125,8 @@
     <resources>
         <image name="CloseCardIcon" width="14" height="14"/>
         <image name="ContactBacupIcon" width="18" height="18"/>
+        <namedColor name="secondaryBackground">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
