--- a/Depo/Depo/Presentation/SubViews/ViewForPopUp/PopUpSubViews/MovieCard/MovieCard.xib
+++ b/Depo/Depo/Presentation/SubViews/ViewForPopUp/PopUpSubViews/MovieCard/MovieCard.xib
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -58,7 +59,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                     </subviews>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <color key="backgroundColor" name="secondaryBackground"/>
                     <constraints>
                         <constraint firstItem="toG-9U-cR8" firstAttribute="leading" secondItem="azH-1I-wjv" secondAttribute="leading" id="Ggl-DB-rIL"/>
                         <constraint firstAttribute="bottom" secondItem="hoW-dS-VOq" secondAttribute="bottom" constant="6" id="IpE-hs-pXS"/>
@@ -115,7 +116,7 @@
                     </connections>
                 </button>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" name="secondaryBackground"/>
             <constraints>
                 <constraint firstItem="azH-1I-wjv" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="14" id="0zn-wQ-dlJ"/>
                 <constraint firstAttribute="trailing" secondItem="DLi-Pt-MfC" secondAttribute="trailing" constant="15" id="1LD-48-fKx"/>
@@ -154,5 +155,8 @@
     <resources>
         <image name="CloseCardIcon" width="14" height="14"/>
         <image name="PlayVideoCardIcon" width="30" height="30"/>
+        <namedColor name="secondaryBackground">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
