--- a/Depo/Depo/Presentation/UserStories/Others/FileInfo/View/FileInfoViewController.xib
+++ b/Depo/Depo/Presentation/UserStories/Others/FileInfo/View/FileInfoViewController.xib
@@ -61,7 +61,7 @@
                 </textField>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hem-zh-lNu">
                     <rect key="frame" x="7" y="81" width="361" height="1"/>
-                    <color key="backgroundColor" red="0.91764705882352937" green="0.91764705882352937" blue="0.91764705882352937" alpha="1" colorSpace="calibratedRGB"/>
+                    <color key="backgroundColor" name="itemSeperator"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="1" id="Q4n-GR-ZQg"/>
                     </constraints>
@@ -119,7 +119,7 @@
                 </label>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Of7-IW-hVl">
                     <rect key="frame" x="7" y="183" width="361" height="1"/>
-                    <color key="backgroundColor" red="0.91764705882352937" green="0.91764705882352937" blue="0.91764705882352937" alpha="1" colorSpace="calibratedRGB"/>
+                    <color key="backgroundColor" name="itemSeperator"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="1" id="3jl-8u-xd9"/>
                     </constraints>
@@ -162,7 +162,7 @@
                 </label>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iW1-w5-Z3C">
                     <rect key="frame" x="7" y="252" width="361" height="1"/>
-                    <color key="backgroundColor" red="0.91764705879999997" green="0.91764705879999997" blue="0.91764705879999997" alpha="1" colorSpace="calibratedRGB"/>
+                    <color key="backgroundColor" name="itemSeperator"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="1" id="Anv-Yl-xLd"/>
                     </constraints>
@@ -234,6 +234,9 @@
         </view>
     </objects>
     <resources>
+        <namedColor name="itemSeperator">
+            <color red="0.91699999570846558" green="0.91699999570846558" blue="0.91699999570846558" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="primaryBackground">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
