--- a/Depo/Depo/Presentation/UserStories/Settings/ContactSync/ContactsBackupHistory/View/View/ContactsBackupHistoryView.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/ContactSync/ContactsBackupHistory/View/View/ContactsBackupHistoryView.xib
@@ -24,7 +24,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view alpha="0.90000000000000002" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zZb-K9-hPU">
-                    <rect key="frame" x="0.0" y="44" width="414" height="95.5"/>
+                    <rect key="frame" x="0.0" y="44" width="414" height="92"/>
                     <subviews>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="contact_buckup_header" translatesAutoresizingMaskIntoConstraints="NO" id="7QK-Jx-lcW">
                             <rect key="frame" x="16" y="20" width="33" height="24"/>
@@ -34,9 +34,9 @@
                             </constraints>
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your latest backup" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eAP-yf-ibi">
-                            <rect key="frame" x="16" y="52" width="382" height="23.5"/>
+                            <rect key="frame" x="16" y="52" width="382" height="20"/>
                             <fontDescription key="fontDescription" name="TurkcellSaturaMed" family="TurkcellSaturaMed" pointSize="20"/>
-                            <color key="textColor" red="0.33725490196078434" green="0.33725490196078434" blue="0.33725490196078434" alpha="0.84705882352941175" colorSpace="calibratedRGB"/>
+                            <color key="textColor" name="lrBrownishGrey"/>
                             <nil key="highlightedColor"/>
                         </label>
                     </subviews>
@@ -51,7 +51,7 @@
                     </constraints>
                 </view>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" style="plain" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Rvl-Gt-mCm">
-                    <rect key="frame" x="0.0" y="155.5" width="414" height="578.5"/>
+                    <rect key="frame" x="0.0" y="152" width="414" height="582"/>
                     <color key="backgroundColor" name="primaryBackground"/>
                     <inset key="separatorInset" minX="16" minY="0.0" maxX="16" maxY="0.0"/>
                 </tableView>
@@ -117,11 +117,14 @@
     </objects>
     <resources>
         <image name="contact_buckup_header" width="34" height="26"/>
+        <namedColor name="lrBrownishGrey">
+            <color red="0.37254899740219116" green="0.37254899740219116" blue="0.37254899740219116" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="primaryBackground">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="toolbarTintColor">
-            <color red="0.97647100687026978" green="0.97647100687026978" blue="0.97647100687026978" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.97600001096725464" green="0.97600001096725464" blue="0.97600001096725464" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
