--- a/Depo/Depo/Presentation/UserStories/Settings/Invitation/InvitationCampaignDetailView/InvitationCampaignDetailView.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/Invitation/InvitationCampaignDetailView/InvitationCampaignDetailView.xib
@@ -47,7 +47,7 @@
                             <subviews>
                                 <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RvJ-mw-LaC">
                                     <rect key="frame" x="15" y="15" width="283" height="47"/>
-                                    <color key="backgroundColor" red="0.019607843137254902" green="0.1764705882352941" blue="0.2627450980392157" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="backgroundColor" name="marineTwoAndTealish"/>
                                     <fontDescription key="fontDescription" name="TurkcellSaturaBol" family="TurkcellSaturaBol" pointSize="20"/>
                                     <state key="normal">
                                         <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -126,6 +126,9 @@
         </view>
     </objects>
     <resources>
+        <namedColor name="marineTwoAndTealish">
+            <color red="0.024000000208616257" green="0.17299999296665192" blue="0.2630000114440918" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="primaryBackground">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
