--- a/Depo/Depo/Presentation/UserStories/Settings/ActivityTimeline/View/Views/ActivityTimelineHeader/ActivityTimelineHeader.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/ActivityTimeline/View/Views/ActivityTimelineHeader/ActivityTimelineHeader.xib
@@ -38,7 +38,10 @@
                     </constraints>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="color" keyPath="mainColor">
-                            <color key="value" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <color key="value" name="primaryBackground"/>
+                        </userDefinedRuntimeAttribute>
+                        <userDefinedRuntimeAttribute type="color" keyPath="ringColor">
+                            <color key="value" name="marineTwoAndWhite"/>
                         </userDefinedRuntimeAttribute>
                     </userDefinedRuntimeAttributes>
                 </view>
@@ -63,6 +66,9 @@
         </view>
     </objects>
     <resources>
+        <namedColor name="marineTwoAndWhite">
+            <color red="0.024000000208616257" green="0.17299999296665192" blue="0.2630000114440918" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="primaryBackground">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
