--- a/Depo/Depo/Presentation/UserStories/Settings/ActivityTimeline/View/Views/ActivityTimelineTimeCell/ActivityTimelineTimeCell.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/ActivityTimeline/View/Views/ActivityTimelineTimeCell/ActivityTimelineTimeCell.xib
@@ -37,6 +37,9 @@
                             <userDefinedRuntimeAttribute type="color" keyPath="ringColor">
                                 <color key="value" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="color" keyPath="mainColor">
+                                <color key="value" name="marineTwoAndWhite"/>
+                            </userDefinedRuntimeAttribute>
                         </userDefinedRuntimeAttributes>
                     </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tsj-NW-byq">
@@ -69,6 +72,9 @@
         </tableViewCell>
     </objects>
     <resources>
+        <namedColor name="marineTwoAndWhite">
+            <color red="0.024000000208616257" green="0.17299999296665192" blue="0.2630000114440918" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="primaryBackground">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
