--- a/Depo/Depo/Presentation/UserStories/Settings/Invitation/AcceptedInvitationViewController/Cell/AcceptedPeopleCollectionViewCell.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/Invitation/AcceptedInvitationViewController/Cell/AcceptedPeopleCollectionViewCell.xib
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -53,7 +54,7 @@
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ijf-aX-HeG">
                         <rect key="frame" x="69" y="0.0" width="241" height="45"/>
                         <fontDescription key="fontDescription" name="TurkcellSaturaReg" family="TurkcellSaturaReg" pointSize="14"/>
-                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="textColor" name="blackColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
@@ -75,4 +76,9 @@
             <point key="canvasLocation" x="-174" y="95"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <namedColor name="blackColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </namedColor>
+    </resources>
 </document>
