--- a/Depo/Depo/Presentation/UserStories/Settings/Invitation/InvitationViewController/Cells/InvitationGift/InvitationGiftCollectionViewCell.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/Invitation/InvitationViewController/Cells/InvitationGift/InvitationGiftCollectionViewCell.xib
@@ -36,13 +36,13 @@
                                     <constraint firstAttribute="width" constant="50" id="taT-Nq-Glx"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="TurkcellSaturaBol" family="TurkcellSaturaBol" pointSize="18"/>
-                                <nil key="textColor"/>
+                                <color key="textColor" name="snackbarGray"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sadece Saklama Alanı" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R7i-iJ-jBC">
                                 <rect key="frame" x="65" y="0.0" width="125" height="61"/>
                                 <fontDescription key="fontDescription" name="TurkcellSaturaReg" family="TurkcellSaturaReg" pointSize="14"/>
-                                <nil key="textColor"/>
+                                <color key="textColor" name="snackbarGray"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bitiş Tarihi : 16 Nis 22" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7m9-JC-svS">
@@ -52,7 +52,7 @@
                                     <constraint firstAttribute="height" constant="61" id="hyI-eA-QSW"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="TurkcellSaturaReg" family="TurkcellSaturaReg" pointSize="14"/>
-                                <nil key="textColor"/>
+                                <color key="textColor" name="snackbarGray"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
@@ -95,6 +95,9 @@
     <resources>
         <namedColor name="primaryBackground">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="snackbarGray">
+            <color red="0.25490200519561768" green="0.25490200519561768" blue="0.25490200519561768" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
