--- a/Depo/Depo/Presentation/UserStories/Settings/Invitation/InvitationViewController/Headers/InvitationCollectionReusableView.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/Invitation/InvitationViewController/Headers/InvitationCollectionReusableView.xib
@@ -28,14 +28,14 @@
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EAz-2m-cft">
                             <rect key="frame" x="0.0" y="0.0" width="375" height="1"/>
-                            <color key="backgroundColor" red="0.59215686274509804" green="0.59215686274509804" blue="0.59215686274509804" alpha="1" colorSpace="calibratedRGB"/>
+                            <color key="backgroundColor" name="darkBorder"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="1" id="3fZ-Cn-WEE"/>
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="j1V-TZ-dmW">
                             <rect key="frame" x="0.0" y="54" width="375" height="1"/>
-                            <color key="backgroundColor" red="0.59215686270000001" green="0.59215686270000001" blue="0.59215686270000001" alpha="1" colorSpace="calibratedRGB"/>
+                            <color key="backgroundColor" name="darkBorder"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="1" id="3VD-n5-jgE"/>
                             </constraints>
@@ -46,7 +46,7 @@
                                 <constraint firstAttribute="height" constant="21" id="PRU-lz-blz"/>
                             </constraints>
                             <fontDescription key="fontDescription" name="TurkcellSaturaReg" family="TurkcellSaturaReg" pointSize="18"/>
-                            <color key="textColor" red="0.37254901960784315" green="0.37254901960784315" blue="0.37254901960784315" alpha="1" colorSpace="calibratedRGB"/>
+                            <color key="textColor" name="lrBrownishGrey"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Arrow" translatesAutoresizingMaskIntoConstraints="NO" id="FOr-5p-qUe">
@@ -88,14 +88,14 @@
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QEI-FZ-gzB">
                             <rect key="frame" x="0.0" y="0.0" width="375" height="1"/>
-                            <color key="backgroundColor" red="0.59215686270000001" green="0.59215686270000001" blue="0.59215686270000001" alpha="1" colorSpace="calibratedRGB"/>
+                            <color key="backgroundColor" name="darkBorder"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="1" id="bXl-4X-knJ"/>
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YZ6-eX-AOX">
                             <rect key="frame" x="0.0" y="113" width="375" height="1"/>
-                            <color key="backgroundColor" red="0.59215686270000001" green="0.59215686270000001" blue="0.59215686270000001" alpha="1" colorSpace="calibratedRGB"/>
+                            <color key="backgroundColor" name="darkBorder"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="1" id="n0e-sM-2xy"/>
                             </constraints>
@@ -106,7 +106,7 @@
                                 <constraint firstAttribute="height" constant="21" id="xKO-VG-ckm"/>
                             </constraints>
                             <fontDescription key="fontDescription" name="TurkcellSaturaReg" family="TurkcellSaturaReg" pointSize="18"/>
-                            <color key="textColor" red="0.37254901959999998" green="0.37254901959999998" blue="0.37254901959999998" alpha="1" colorSpace="calibratedRGB"/>
+                            <color key="textColor" name="lrBrownishGrey"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6o9-nY-LTr">
@@ -118,7 +118,7 @@
                                         <constraint firstAttribute="height" constant="13" id="vjS-or-1Mu"/>
                                     </constraints>
                                     <fontDescription key="fontDescription" name="TurkcellSaturaReg" family="TurkcellSaturaReg" pointSize="12"/>
-                                    <color key="textColor" red="0.37254901959999998" green="0.37254901959999998" blue="0.37254901959999998" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="textColor" name="lrBrownishGrey"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="txp-vE-2Ab">
@@ -150,7 +150,7 @@
                         </view>
                         <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mLh-FB-7nA">
                             <rect key="frame" x="239" y="54" width="127" height="45"/>
-                            <color key="backgroundColor" red="0.019607843137254902" green="0.1764705882352941" blue="0.2627450980392157" alpha="1" colorSpace="calibratedRGB"/>
+                            <color key="backgroundColor" name="darkBlueAndTealish"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="45" id="5uj-ct-4sm"/>
                                 <constraint firstAttribute="width" constant="127" id="Ayl-2p-UR4"/>
@@ -197,7 +197,7 @@
                                 <constraint firstAttribute="height" constant="21" id="BJy-qY-2DJ"/>
                             </constraints>
                             <fontDescription key="fontDescription" name="TurkcellSaturaReg" family="TurkcellSaturaReg" pointSize="18"/>
-                            <color key="textColor" red="0.37254901959999998" green="0.37254901959999998" blue="0.37254901959999998" alpha="1" colorSpace="calibratedRGB"/>
+                            <color key="textColor" name="lrBrownishGrey"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="1no-pg-IUn">
@@ -262,11 +262,11 @@
                                 <constraint firstAttribute="height" constant="21" id="YT9-GG-Iru"/>
                             </constraints>
                             <fontDescription key="fontDescription" name="TurkcellSaturaReg" family="TurkcellSaturaReg" pointSize="18"/>
-                            <color key="textColor" red="0.37254901959999998" green="0.37254901959999998" blue="0.37254901959999998" alpha="1" colorSpace="calibratedRGB"/>
+                            <color key="textColor" name="lrBrownishGrey"/>
                             <nil key="highlightedColor"/>
                         </label>
                     </subviews>
-                    <color key="backgroundColor" name="primaryBackground"/>
+                    <color key="backgroundColor" name="secondaryBackground"/>
                     <constraints>
                         <constraint firstAttribute="trailing" secondItem="hjP-bf-eX3" secondAttribute="trailing" constant="9" id="23h-Pq-XBi"/>
                         <constraint firstItem="hjP-bf-eX3" firstAttribute="top" secondItem="0VB-21-iXY" secondAttribute="top" constant="14" id="DvB-GE-h0a"/>
@@ -307,7 +307,19 @@
     <resources>
         <image name="Arrow" width="8" height="12"/>
         <image name="copy-link" width="20" height="24"/>
+        <namedColor name="darkBlueAndTealish">
+            <color red="0.019608000293374062" green="0.17647099494934082" blue="0.26274499297142029" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="darkBorder">
+            <color red="0.59200000762939453" green="0.59200000762939453" blue="0.59200000762939453" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="lrBrownishGrey">
+            <color red="0.37299999594688416" green="0.37299999594688416" blue="0.37299999594688416" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="primaryBackground">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="secondaryBackground">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
