--- a/Depo/Depo/Presentation/UserStories/Settings/PeriodicContactSync/View/Subviews/PeriodicContactSyncSettingsTableViewCell.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/PeriodicContactSync/View/Subviews/PeriodicContactSyncSettingsTableViewCell.xib
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -17,17 +16,17 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="218.5" id="KGk-i7-Jjw" customClass="PeriodicContactSyncSettingsTableViewCell" customModule="lifebox" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="218.5" id="KGk-i7-Jjw" customClass="PeriodicContactSyncSettingsTableViewCell" customModule="Billo" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="319" height="231"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="319" height="230.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="319" height="231"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="LZb-e6-h8C">
-                        <rect key="frame" x="28" y="53.5" width="275" height="177"/>
+                        <rect key="frame" x="28" y="54" width="275" height="177"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ifI-JG-lGf" customClass="PeriodicContactsSyncSettingsOptionView" customModule="lifebox" customModuleProvider="target">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ifI-JG-lGf" customClass="PeriodicContactsSyncSettingsOptionView" customModule="Billo" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="0.0" width="275" height="56.5"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XRK-wv-rPH">
@@ -48,9 +47,9 @@
                                             <constraint firstAttribute="width" constant="16" id="mdm-wH-GOC"/>
                                         </constraints>
                                     </imageView>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vlD-lt-K55">
+                                    <view alpha="0.5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vlD-lt-K55">
                                         <rect key="frame" x="-12" y="55.5" width="283" height="1"/>
-                                        <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="calibratedWhite"/>
+                                        <color key="backgroundColor" name="darkBorder"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="1" id="IqS-Wv-hbE"/>
                                         </constraints>
@@ -72,7 +71,7 @@
                                     <outlet property="checkboxImageView" destination="DjW-TS-eAX" id="IB7-46-fVS"/>
                                 </connections>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="U1g-k2-KUQ" customClass="PeriodicContactsSyncSettingsOptionView" customModule="lifebox" customModuleProvider="target">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="U1g-k2-KUQ" customClass="PeriodicContactsSyncSettingsOptionView" customModule="Billo" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="60.5" width="275" height="56"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Kwl-OX-HMv">
@@ -87,15 +86,15 @@
                                         </connections>
                                     </button>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="checkmark" translatesAutoresizingMaskIntoConstraints="NO" id="dDd-y4-3DP">
-                                        <rect key="frame" x="242.5" y="20.5" width="16" height="16"/>
+                                        <rect key="frame" x="242.5" y="20" width="16" height="16"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="16" id="BtG-Cw-Ooh"/>
                                             <constraint firstAttribute="width" constant="16" id="dfm-Z1-Ary"/>
                                         </constraints>
                                     </imageView>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Aa2-1F-JSl">
+                                    <view alpha="0.5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Aa2-1F-JSl">
                                         <rect key="frame" x="-12" y="55" width="283" height="1"/>
-                                        <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="calibratedWhite"/>
+                                        <color key="backgroundColor" name="darkBorder"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="1" id="5ON-WC-IlX"/>
                                         </constraints>
@@ -117,7 +116,7 @@
                                     <outlet property="checkboxImageView" destination="dDd-y4-3DP" id="eLt-hf-Y2K"/>
                                 </connections>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GvU-yh-jdJ" customClass="PeriodicContactsSyncSettingsOptionView" customModule="lifebox" customModuleProvider="target">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GvU-yh-jdJ" customClass="PeriodicContactsSyncSettingsOptionView" customModule="Billo" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="120.5" width="275" height="56.5"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="W1N-vA-kde">
@@ -138,9 +137,9 @@
                                             <constraint firstAttribute="height" constant="16" id="iqc-RS-QyS"/>
                                         </constraints>
                                     </imageView>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ftL-7M-g0o">
+                                    <view alpha="0.5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ftL-7M-g0o">
                                         <rect key="frame" x="-12" y="55.5" width="283" height="1"/>
-                                        <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="calibratedWhite"/>
+                                        <color key="backgroundColor" name="darkBorder"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="1" id="Oam-TU-txD"/>
                                         </constraints>
@@ -170,24 +169,24 @@
                             <constraint firstItem="hxK-WM-zMk" firstAttribute="trailing" secondItem="dDd-y4-3DP" secondAttribute="trailing" id="nuZ-0I-p54"/>
                         </constraints>
                     </stackView>
-                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="aOe-fe-AKA" customClass="CustomSwitch" customModule="lifebox" customModuleProvider="target">
-                        <rect key="frame" x="254" y="5.5" width="51" height="31"/>
+                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="aOe-fe-AKA" customClass="CustomSwitch" customModule="Billo" customModuleProvider="target">
+                        <rect key="frame" x="254" y="5" width="51" height="31"/>
                         <connections>
                             <action selector="onSwitcherValueChanged" destination="KGk-i7-Jjw" eventType="valueChanged" id="GBP-3e-a7M"/>
                         </connections>
                     </switch>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LeE-sm-W0M">
-                        <rect key="frame" x="16" y="48.5" width="283" height="1"/>
-                        <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="calibratedWhite"/>
+                    <view alpha="0.5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LeE-sm-W0M">
+                        <rect key="frame" x="16" y="49" width="283" height="1"/>
+                        <color key="backgroundColor" name="darkBorder"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="1" id="Prs-1R-Fbl"/>
                         </constraints>
                     </view>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="2Rj-mp-kEk">
-                        <rect key="frame" x="28" y="8" width="42" height="24.5"/>
+                        <rect key="frame" x="28" y="8" width="41.5" height="25"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="750" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vK8-ni-iua">
-                                <rect key="frame" x="0.0" y="0.0" width="42" height="24.5"/>
+                                <rect key="frame" x="0.0" y="0.0" width="41.5" height="25"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -231,5 +230,8 @@
     </objects>
     <resources>
         <image name="checkmark" width="16" height="12"/>
+        <namedColor name="darkBorder">
+            <color red="0.59200000762939453" green="0.59200000762939453" blue="0.59200000762939453" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
