--- a/Depo/Depo/Presentation/SubViews/ViewForPopUp/PopUpSubViews/DivorceCard/DivorceCard.xib
+++ b/Depo/Depo/Presentation/SubViews/ViewForPopUp/PopUpSubViews/DivorceCard/DivorceCard.xib
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
-        <array key="TurkcellSatura.ttf">
+        <array key="Turkcell_Satura_Regular.ttf">
             <string>TurkcellSatura</string>
         </array>
     </customFonts>
@@ -90,7 +90,7 @@
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gkh-ne-Jdf">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="1"/>
-                                    <color key="backgroundColor" red="0.76078431369999999" green="0.76078431369999999" blue="0.76078431369999999" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="backgroundColor" name="itemSeperator"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="1" id="HjM-Wo-sUy"/>
                                     </constraints>
@@ -141,6 +141,9 @@
     <resources>
         <image name="CloseCardIcon" width="14" height="14"/>
         <image name="PlayVideoCardIcon" width="30" height="30"/>
+        <namedColor name="itemSeperator">
+            <color red="0.91699999570846558" green="0.91699999570846558" blue="0.91699999570846558" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="secondaryBackground">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
